@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-30T01:35:16Z",
-  "count_outdated" : 246,
-  "uniques_outdated" : 90,
-  "count" : 264,
+  "timestamp" : "2022-11-30T16:25:48Z",
+  "count_outdated" : 248,
+  "uniques_outdated" : 91,
+  "count" : 265,
   "uniques" : 102,
   "clones" : [
-    {
-      "timestamp": "2022-11-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-17T00:00:00Z",
       "count": 2,
