@@ -1,3 +1,11 @@
+2022-11-30T16:25:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3585157214 # 276
+* notice: last 14d: unq all: 2 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 90 246 / 102 264
+* notice: next accum: outdated-unq outdated-all / unq all: 91 248 / 102 265
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-16] / []
+
 2022-11-30T01:35:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3579521204 # 274
 * notice: last 14d: unq all: 2 18
